Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 2.34***

***	SigParser and the Netlister now ignore function and task IOs.

* Verilog::Language 2.341 2006/02/06

***	Add SystemVerilog `0, `1, `x, `z.  [John Tseng]

****	Fix module #() parameter declarations.  [Andy Kuo]

****	Fix "output reg" and "output wire" declarations.  [Andy Kuo]

* Verilog::Language 2.340 2006/01/16

***     Added vpm --minimum switch.

****	Added Verilog::Language::language_standard to allow setting
	which language standard (1995,2001,SystemVerilog) is used for keywords.

****	Fix vhier -o option. [Sean Nazareth]

****	Add vhier --modules and --missing-modules options. [Sean Nazareth]

* Verilog::Language 2.331 2005/10/05

***     Added vhier example program. [Vasu Arasanipalai]

* Verilog::Language 2.330 2005/09/06

***	vpm now aliases $error to $uerror, etc, to avoid conflict
	with SystemVerilog $error function.  [Tad Truex]

***	$uassert_info now uses __message_on. [Vasu Arasanipalai]

****	Fix preprocessor substitution of quoted parametrized defines.

* Verilog::Language 2.321 2005/08/03

***	Verilog::SigParser now sees cells inside generates.  [by Thomas Ziller]

* Verilog::Language 2.320 2005/07/27

***     Add vrename --cryptall option.

***     Fix Language is_keywords to match V2K language spec. [Mark Grossman]
	Deleted extern, makefile, supply.  Added ifnone, strength, unsigned.

****	Fix core dump when missing newline in `define.  [David van der bokke]

* Verilog::Language 2.316 2005/06/10

****	Fix define substitution with incomplete defines.  [by Ronald Dean Smith]

****	Fix C++ Comments causing Perl compile problems. [Merijn Brand]

* Verilog::Language 2.315 2005/03/16

****	Support for latest SystemC::Netlist version.

* Verilog::Language 2.314 2005/03/14

****	Support for latest SystemC::Netlist version.
