@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	SigParser and the Netlister now ignore function and task IOs.
 
+****	Preproc line numbers being off due to multi-line defines.  [Mat Zeno]
+
 * Verilog::Language 2.341 2006/02/06
 
 ***	Add SystemVerilog `0, `1, `x, `z.  [John Tseng]
